# D3-Weather-Lab

./: README.md  friend_functions.py  globalize_weather.sh  people.py  pyproject.toml  test_friend_functions.py
weather/: weather.py  weather_apis.py  weather_cli.py
